# Agent_X

./: .agentx-init  .gitattributes  .gitignore  .pre-commit-config.yaml  CAPABILITY_MANIFEST.yaml  CONTRIBUTING.md  EVOLUTION_ACCEPTANCE.md  EXTENSION_ABI.md  KERNEL_SEED_DESCRIPTION.md  LICENSE  MANIFEST.md  Makefile  PIPELINE.md  PUBLIC_CONTRACT_POLICY.md  README.md  Roadmap.md  SEED_ACCEPTANCE.md  SEED_INVARIANTS.yaml  SEED_PACKAGE_MANIFEST.yaml  SELF_AUDIT.md  _temp_todo.md  hi  pyproject.toml  pytest.ini  run_acceptance_ladder.sh
tools/agentx_evolve/: ARCHITECTURE.md  __main__.py  generate_adapter_acceptance_matrix.py  generate_adapter_final_verdict.py  pyproject.toml  run_adapter_anti_false_pass_audit.py  validate_agentx_adapter_acceptance_matrix.py  validate_agentx_adapter_anti_false_pass.py  validate_agentx_adapter_final_verdict.py  validate_agentx_adapter_replay.py
tools/agentx_evolve/acceptance/: __init__.py  acceptance.py  adapter_record_command.py  build_acceptance_rows.py  check_frmvp_non_regression.py  collect_mvp_proof.py  command_transcript.py  compatibility_report.py  exercise_orchestrator_scenarios.py  extra_generators.py  functional_acceptance.py  generate_adapter_evidence_manifest.py  generate_adapter_idempotency_report.py  generate_adapter_report_aliases.py  generate_filesystem_snapshot.py  generate_final_verdict.py  generate_gap_discovery_report.py  generate_idempotency_report.py  generate_mvp_reports.py  generate_proof_config_manifest.py  generate_required_artifacts_manifest.py  generate_scope_map.py  generate_traceability_matrix.py  proof_result.py  record_command.py  record_make_transcript.py  recover_transcript.py  regenerate_transcript_md.py  replay_execute.py  reuse_map.py  run_anti_false_pass_audit.py  scan_secrets.py  scenario_export.py  validate_zero_byte_utf8.py  verify_existing_proof.py
tools/agentx_evolve/adapters/: __init__.py  adapter_failures.py  adapter_registry.py  cohere_model_adapter.py  conformance.py  deterministic_mock_model_adapter.py  local_tool_adapter.py  mcp_adapter.py  mcp_contract.py  model_adapter.py  model_request.py  model_response.py  replay_policy.py  tool_adapter.py  tool_result.py
tools/agentx_evolve/adversarial/: __init__.py  adversarial_engine.py  default_attack_suite.py
tools/agentx_evolve/agents/: __init__.py  agent_roles.py  base_agent.py
tools/agentx_evolve/artifacts/: __init__.py  artifact_store.py
tools/agentx_evolve/backup/: __init__.py  backup_audit_logger.py  backup_catalog.py  backup_cli_tools.py  backup_dependency_adapters.py  backup_locks.py  (+15 more)
tools/agentx_initiator/: README.md  pyproject.toml  setup.py
(+4211 files in other folders)
